@@ -1,20 +1,17 @@
 package br.com.avocat.service;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import javax.transaction.Transactional;
-
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-
 import br.com.avocat.exception.AvocatException;
 import br.com.avocat.persistence.model.Contrato;
 import br.com.avocat.persistence.repository.ContratoRepository;
 import br.com.avocat.persistence.repository.PessoaRepository;
 import br.com.avocat.util.ObjetoUtil;
 import br.com.avocat.web.response.ContratoResponse;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
+
+import javax.transaction.Transactional;
+import java.util.List;
+import java.util.Optional;
 
 @Service
 public class ContratoService {
@@ -27,44 +24,27 @@ public class ContratoService {
 	
 	@Transactional
 	public Optional<ContratoResponse> save(Contrato contrato) {
-		
 			validar(contrato);
 		
 			var pessoa = pessoaRepository.findById(contrato.getPessoaId());
 			
 			if(pessoa.isPresent()) {
-				
 				contrato.setPessoa(pessoa.get());
-				
 				var result = contratoRepository.save(contrato);
-				
 				return Optional.of(new ContratoResponse(result));
-				
-			} else { 
-				
-				return Optional.empty();			
+			} else {
+				return Optional.empty();
 			}
 	}
 
 	public Optional<ContratoResponse> get(Long id) {
-		
 		var result = contratoRepository.findById(id);
-		
-		if(result.isPresent()) {
-			
-			return Optional.ofNullable(new ContratoResponse(result.get()));
-			
-		} else {
-			
-			return Optional.empty();
-		}
+		return result.map(ContratoResponse::new);
 	}
 
 	public List<ContratoResponse> all() {
-		
 		var result = contratoRepository.findAll();
-		
-		return result.stream().map(ContratoResponse::new).collect(Collectors.toList());
+		return result.stream().map(ContratoResponse::new).toList();
 	}
 
 	@Transactional
@@ -82,7 +62,7 @@ public class ContratoService {
 			new AvocatException("Modalidade do contrato não pode ser nulo o vazio.")
 		);
 		
-		ObjetoUtil.verifica(contrato.getPessoa()).orElseThrow(() -> 
+		ObjetoUtil.verifica(contrato.getPessoaId()).orElseThrow(() ->
 			new AvocatException("A pessoa do contrato não pode ser nulo o vazio.")
 		);
 	}
